--- a/index.html
+++ b/index.html
@@ -5,6 +5,92 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Prechu</title>
+		<link rel="stylesheet" href="CSS/normalize.css" />
+		<link rel="stylesheet" href="CSS/style.css" />
 	</head>
-	<body></body>
+	<body>
+		<header class="header" id="home">
+			<div class="commonWrapper headerWrapper">
+				<div class="headerLogoWrapper">
+					<img src="assets/icons/PrechuLogo.png" alt="logoImage" class="headerLogoImage" />
+					<h1 class="headerLogo">Prechu</h1>
+				</div>
+				<nav class="nav">
+					<ul class="navList">
+						<li class="navItem"><a href="#home" class="navLink">Home</a></li>
+						<li class="navItem"><a href="#products" class="navLink">Products</a></li>
+						<li class="navItem"><a href="#services" class="navLink">Services</a></li>
+						<li class="navItem"><a href="#contact" class="navLink">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<main class="main">
+			<section class="backgroundBanner" id="products">
+				<div class="commonWrapper bannerWrapper">
+					<div class="iphoneImageWrapper">
+						<img src="/assets/img/iphone.png" alt="iphone" />
+					</div>
+					<div class="bannerImageDescription">
+						<h2 class="bannerHeader">Lorem Ipsum is simply</h2>
+						<div class="bannerDescription">dummy text of the printing & typesetting</div>
+						<button class="signUpNow">
+							<img src="/assets/icons/signButIcon.png" alt="signButIcon" />
+							Sign up now
+						</button>
+					</div>
+					<img src="/assets/icons/slideArrow.png" alt="slideArrowLeft" class="slideArrow" />
+					<img src="/assets/icons/slideArrow.png" alt="slideArrowRight" class="slideArrow slideArrowRight" />
+				</div>
+			</section>
+			<section class="commonWrapper iconsWrapper" id="services">
+				<div class="commonIconsContainer pencilWrapper">
+					<div class="iconsImageContainer pencilImageContainer">
+						<img src="/assets/icons/pencil.png" alt="pencil" />
+					</div>
+					<h4 class="iconsHeader">Contrary to popular</h4>
+					<p class="iconsDescription">Lorem Ipsum is not simply random text. It has roots in a piece</p>
+				</div>
+				<div class="commonIconsContainer compWrapper">
+					<div class="iconsImageContainer compImageContainer">
+						<img src="/assets/icons/computer.png" alt="computer" />
+					</div>
+					<h4 class="iconsHeader">Contrary to popular</h4>
+					<p class="iconsDescription">Lorem Ipsum is not simply random text. It has roots in a piece</p>
+				</div>
+				<div class="commonIconsContainer shopcartWrapper">
+					<div class="iconsImageContainer shopcartImageContainer">
+						<img src="/assets/icons/shopCart.png" alt="shopCart" />
+					</div>
+					<h4 class="iconsHeader">Contrary to popular</h4>
+					<p class="iconsDescription">Lorem Ipsum is not simply random text. It has roots in a piece</p>
+				</div>
+			</section>
+			<section class="commonWrapper shoppingCartWrapper" id="contact">
+				<div class="shoppingCartHeaderContainer">
+					<h3 class="shoppingCartHeader">The Shopping cart</h3>
+				</div>
+				<div class="shoppingCartDescriptionWrapper">
+					<div class="shoppingCartImageContainer">
+						<img src="/assets/img/cart.jpg" alt="cart" />
+					</div>
+					<div class="shoppingCartDescriptionContainer">
+						<h4 class="shoppingCartDescriptionHeader">Some Bullet text here</h4>
+						<p class="shoppingCartDescription">
+							Lorem Ipsum is simply dummy text of the printing and typesetting Lorem Ipsum has been the industry's
+							standard dummy text ever When an unknown printer took a galley of type and scrambled It to make a type
+							specimen book. It has survived not only five centuriesBut also the leap into electronic
+							typesetting,Remaining essentially unchanged. It was popularised The release of Letraset sheets containing
+							Lorem Ipsum passages
+						</p>
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer class="footer">
+			<div class="commonWrapper footerCopyrightWrapper">
+				<p class="footerCopyright">Copyright &copy; 2012-2013 cssauthor.com</p>
+			</div>
+		</footer>
+	</body>
 </html>
