--- a/index.html
+++ b/index.html
@@ -48,22 +48,28 @@
 					<div class="iconsImageContainer pencilImageContainer">
 						<img src="/assets/icons/pencil.png" alt="pencil" />
 					</div>
-					<h4 class="iconsHeader">Contrary to popular</h4>
-					<p class="iconsDescription">Lorem Ipsum is not simply random text. It has roots in a piece</p>
+					<div class="iconsDescriptionWrapper">
+						<h4 class="iconsHeader">Contrary to popular</h4>
+						<p class="iconsDescription">Lorem Ipsum is not simply random text. It has roots in a piece</p>
+					</div>
 				</div>
 				<div class="commonIconsContainer compWrapper">
 					<div class="iconsImageContainer compImageContainer">
 						<img src="/assets/icons/computer.png" alt="computer" />
 					</div>
-					<h4 class="iconsHeader">Contrary to popular</h4>
-					<p class="iconsDescription">Lorem Ipsum is not simply random text. It has roots in a piece</p>
+					<div class="iconsDescriptionWrapper">
+						<h4 class="iconsHeader">Contrary to popular</h4>
+						<p class="iconsDescription">Lorem Ipsum is not simply random text. It has roots in a piece</p>
+					</div>
 				</div>
 				<div class="commonIconsContainer shopcartWrapper">
 					<div class="iconsImageContainer shopcartImageContainer">
 						<img src="/assets/icons/shopCart.png" alt="shopCart" />
 					</div>
-					<h4 class="iconsHeader">Contrary to popular</h4>
-					<p class="iconsDescription">Lorem Ipsum is not simply random text. It has roots in a piece</p>
+					<div class="iconsDescriptionWrapper">
+						<h4 class="iconsHeader">Contrary to popular</h4>
+						<p class="iconsDescription">Lorem Ipsum is not simply random text. It has roots in a piece</p>
+					</div>
 				</div>
 			</section>
 			<section class="commonWrapper shoppingCartWrapper" id="contact">
