--- a/index.html
+++ b/index.html
@@ -22,15 +22,31 @@
 						<li class="navItem"><a href="#services" class="navLink">Services</a></li>
 						<li class="navItem"><a href="#contact" class="navLink">Contact</a></li>
 					</ul>
+
+					<div class="burgerWrapper">
+						<button class="burger" id="burgerMenu">
+							<span></span>
+							<span></span>
+							<span></span>
+						</button>
+					</div>
+					<ul class="burgerNavList">
+						<li class="burgerNavItem"><a href="#home" class="burgerNavLink">Home</a></li>
+						<li class="burgerNavItem"><a href="#products" class="burgerNavLink">Products</a></li>
+						<li class="burgerNavItem"><a href="#services" class="burgerNavLink">Services</a></li>
+						<li class="burgerNavItem"><a href="#contact" class="burgerNavLink">Contact</a></li>
+					</ul>
 				</nav>
 			</div>
 		</header>
+
 		<main class="main">
 			<section class="backgroundBanner" id="products">
 				<div class="commonWrapper bannerWrapper">
 					<div class="iphoneImageWrapper">
 						<img src="/assets/img/iphone.png" alt="iphone" />
 					</div>
+
 					<div class="bannerImageDescription">
 						<h2 class="bannerHeader">Lorem Ipsum is simply</h2>
 						<div class="bannerDescription">dummy text of the printing & typesetting</div>
@@ -39,10 +55,12 @@
 							Sign up now
 						</button>
 					</div>
+
 					<img src="/assets/icons/slideArrow.png" alt="slideArrowLeft" class="slideArrow" />
 					<img src="/assets/icons/slideArrow.png" alt="slideArrowRight" class="slideArrow slideArrowRight" />
 				</div>
 			</section>
+
 			<section class="commonWrapper iconsWrapper" id="services">
 				<div class="commonIconsContainer pencilWrapper">
 					<div class="iconsImageContainer pencilImageContainer">
@@ -53,6 +71,7 @@
 						<p class="iconsDescription">Lorem Ipsum is not simply random text. It has roots in a piece</p>
 					</div>
 				</div>
+
 				<div class="commonIconsContainer compWrapper">
 					<div class="iconsImageContainer compImageContainer">
 						<img src="/assets/icons/computer.png" alt="computer" />
@@ -62,6 +81,7 @@
 						<p class="iconsDescription">Lorem Ipsum is not simply random text. It has roots in a piece</p>
 					</div>
 				</div>
+
 				<div class="commonIconsContainer shopcartWrapper">
 					<div class="iconsImageContainer shopcartImageContainer">
 						<img src="/assets/icons/shopCart.png" alt="shopCart" />
@@ -72,10 +92,12 @@
 					</div>
 				</div>
 			</section>
+
 			<section class="commonWrapper shoppingCartWrapper" id="contact">
 				<div class="shoppingCartHeaderContainer">
 					<h3 class="shoppingCartHeader">The Shopping cart</h3>
 				</div>
+
 				<div class="shoppingCartDescriptionWrapper">
 					<div class="shoppingCartImageContainer">
 						<img src="/assets/img/cart.jpg" alt="cart" />
@@ -93,10 +115,13 @@
 				</div>
 			</section>
 		</main>
+
 		<footer class="footer">
 			<div class="commonWrapper footerCopyrightWrapper">
 				<p class="footerCopyright">Copyright &copy; 2012-2013 cssauthor.com</p>
 			</div>
 		</footer>
+		<script src="/JS/smoothScroll.js" defer></script>
+		<script src="/JS/main.js" defer></script>
 	</body>
 </html>
