--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<p class="footerCopyright">Copyright &copy; 2012-2013 cssauthor.com</p>
 			</div>
 		</footer>
-		<script src="/JS/smoothScroll.js" defer></script>
-		<script src="/JS/main.js" defer></script>
+		<script src="/JS/main.js" type="module" defer></script>
+		<!-- <script src="/JS/smoothScroll.js" module></script> -->
 	</body>
 </html>
