--- a/index.html
+++ b/index.html
@@ -44,27 +44,27 @@
 			<section class="backgroundBanner" id="products">
 				<div class="commonWrapper bannerWrapper">
 					<div class="iphoneImageWrapper">
-						<img src="/assets/img/iphone.png" alt="iphone" />
+						<img src="assets/img/iphone.png" alt="iphone" />
 					</div>
 
 					<div class="bannerImageDescription">
 						<h2 class="bannerHeader">Lorem Ipsum is simply</h2>
 						<div class="bannerDescription">dummy text of the printing & typesetting</div>
 						<button class="signUpNow">
-							<img src="/assets/icons/signButIcon.png" alt="signButIcon" />
+							<img src="assets/icons/signButIcon.png" alt="signButIcon" />
 							Sign up now
 						</button>
 					</div>
 
-					<img src="/assets/icons/slideArrow.png" alt="slideArrowLeft" class="slideArrow" />
-					<img src="/assets/icons/slideArrow.png" alt="slideArrowRight" class="slideArrow slideArrowRight" />
+					<img src="assets/icons/slideArrow.png" alt="slideArrowLeft" class="slideArrow" />
+					<img src="assets/icons/slideArrow.png" alt="slideArrowRight" class="slideArrow slideArrowRight" />
 				</div>
 			</section>
 
 			<section class="commonWrapper iconsWrapper" id="services">
 				<div class="commonIconsContainer pencilWrapper">
 					<div class="iconsImageContainer pencilImageContainer">
-						<img src="/assets/icons/pencil.png" alt="pencil" />
+						<img src="assets/icons/pencil.png" alt="pencil" />
 					</div>
 					<div class="iconsDescriptionWrapper">
 						<h4 class="iconsHeader">Contrary to popular</h4>
@@ -74,7 +74,7 @@
 
 				<div class="commonIconsContainer compWrapper">
 					<div class="iconsImageContainer compImageContainer">
-						<img src="/assets/icons/computer.png" alt="computer" />
+						<img src="assets/icons/computer.png" alt="computer" />
 					</div>
 					<div class="iconsDescriptionWrapper">
 						<h4 class="iconsHeader">Contrary to popular</h4>
@@ -84,7 +84,7 @@
 
 				<div class="commonIconsContainer shopcartWrapper">
 					<div class="iconsImageContainer shopcartImageContainer">
-						<img src="/assets/icons/shopCart.png" alt="shopCart" />
+						<img src="assets/icons/shopCart.png" alt="shopCart" />
 					</div>
 					<div class="iconsDescriptionWrapper">
 						<h4 class="iconsHeader">Contrary to popular</h4>
@@ -100,7 +100,7 @@
 
 				<div class="shoppingCartDescriptionWrapper">
 					<div class="shoppingCartImageContainer">
-						<img src="/assets/img/cart.jpg" alt="cart" />
+						<img src="assets/img/cart.jpg" alt="cart" />
 					</div>
 					<div class="shoppingCartDescriptionContainer">
 						<h4 class="shoppingCartDescriptionHeader">Some Bullet text here</h4>
@@ -121,6 +121,6 @@
 				<p class="footerCopyright">Copyright &copy; 2012-2013 cssauthor.com</p>
 			</div>
 		</footer>
-		<script src="/JS/main.js" type="module" defer></script>
+		<script src="JS/main.js" type="module" defer></script>
 	</body>
 </html>
